[FIX] Interface: Enhance readability of grey text
RT­2243 #Deliver
In multiple places of the interface, #ccccca @midgray is used as text
color. This is hard to read, especially on lightgray backgrounds.
Replace color: @midgray with @darkgray where suitable, enhance navbar
and subnav hover styles.

--- a/src/less/ripple/combobox.less
+++ b/src/less/ripple/combobox.less
@@ -36,7 +36,7 @@
 
       .additional {
         display: block;
-        color: @midgray;
+        color: @darkgray;
         font-size: 12px;
       }
     }
