--- a/src/less/ripple/status.less
+++ b/src/less/ripple/status.less
@@ -179,7 +179,7 @@
     }
 
     &.type-offline {
-      color: @midgray;
+      color: @darkgray;
       background-color: @black;
       border-color: @notification-border;
     }
