--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -536,7 +536,7 @@
         font-family : OpenSansBold;
 
         .desc {
-          color: @midgray;
+          color: @darkgray;
           font: 12px OpenSansLight;
         }
       }
@@ -579,7 +579,7 @@
 
         .lbl {
           font-size: 12px;
-          color: @midgray;
+          color: @darkgray;
           font: 12px OpenSansLight;
         }
 
@@ -1535,7 +1535,7 @@
         }
 
         .ex {
-           color: @midgray;
+           color: @darkgray;
 
            .pair {
              margin-left: 5px;
@@ -2203,7 +2203,7 @@
       margin-bottom: 10px;
 
       .currency {
-        color: @midgray;
+        color: @darkgray;
       }
     }
 
@@ -2262,7 +2262,7 @@
 
     .issuer {
       font-size: 10px;
-      color: @midgray;
+      color: @darkgray;
     }
   }
 
@@ -2351,7 +2351,7 @@ html.t-trade header nav ul > li.active#nav-advanced > a:after {
     font-family : OpenSansBold;
 
     .desc {
-      color: @midgray;
+      color: @darkgray;
       font: 12px OpenSansLight;
     }
   }
